toml-pretty-deser/compilation_failure_tests/tagged_enum_no_tag.stderr
error: simple enums must have unit variants; use #[tpd(tag = "key")] for tagged enums
  --> compilation_failure_tests/tagged_enum_no_tag.rs:10:5
   |
10 |     TagA (MyStruct),
   |     ^^^^^^^^^^^^^^^
